site and slide polish

--- a/docs/slides/cols.css
+++ b/docs/slides/cols.css
@@ -7,8 +7,8 @@
 
 /*Optional: Color header boxes*/
 .multicolhead {
-    background-color:#4B9CD3;
-    color: #FFFFFF;
+    /*background-color:#4B9CD3;
+    color: #FFFFFF;*/
 }
 
 .wordwrap { 
